cheange openapi fix for result
